# finite-diff

./: CMakeLists.txt  README.md  finite_diff.cpp  main.cpp
src/: example_10.2.cpp  main.cpp  tests.cpp
